tests/spec/pass/list_sort.aja
nums = [4, 2, 5, 1, 3]
print(nums)

sorted_nums = sort(nums)
print(sorted_nums)

print(nums[0])
print(sorted_nums[0])

names = ["zeta", "beta", "alpha"]
print(sort(names))
