tests/spec/fail/index_assign_type_mismatch.aja
items = [1, 2]
items[0] = "oops"
